--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,1 +1,40 @@
 @import "tailwindcss";
+
+body {@apply bg-gray-50 dark:bg-gray-800}
+
+@theme {
+    --color-primary-50: var(--color-sky-50);
+    --color-primary-100: var(--color-sky-100);
+    --color-primary-200: var(--color-sky-200);
+    --color-primary-300: var(--color-sky-300);
+    --color-primary-400: var(--color-sky-400);
+    --color-primary-500: var(--color-sky-500);
+    --color-primary-600: var(--color-sky-600);
+    --color-primary-700: var(--color-sky-700);
+    --color-primary-800: var(--color-sky-800);
+    --color-primary-900: var(--color-sky-900);
+
+
+    --color-secondary-50: var(--color-pink-50);
+    --color-secondary-100: var(--color-pink-100);
+    --color-secondary-200: var(--color-pink-200);
+    --color-secondary-300: var(--color-pink-300);
+    --color-secondary-400: var(--color-pink-400);
+    --color-secondary-500: var(--color-pink-500);
+    --color-secondary-600: var(--color-pink-600);
+    --color-secondary-700: var(--color-pink-700);
+    --color-secondary-800: var(--color-pink-800);
+    --color-secondary-900: var(--color-pink-900);
+
+    --color-accent-50: var(--color-yellow-50);
+    --color-accent-100: var(--color-yellow-100);
+    --color-accent-200: var(--color-yellow-200);
+    --color-accent-300: var(--color-yellow-300);
+    --color-accent-400: var(--color-yellow-400);
+    --color-accent-500: var(--color-yellow-500);
+    --color-accent-600: var(--color-yellow-600);
+    --color-accent-700: var(--color-yellow-700);
+    --color-accent-800: var(--color-yellow-800);
+    --color-accent-900: var(--color-yellow-900);
+
+}
