--- a/client/src/components/editor/EditableComponent.module.css
+++ b/client/src/components/editor/EditableComponent.module.css
@@ -1,11 +1,12 @@
+/* styles.css */
 .SelectionContent {
     animation-duration: 400ms;
     animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
 }
-.SelectionContent[data-state='open'][data-side='top'] {
+.SelectionContent[data-state='open'] {
     animation-name: slideDownAndFade;
 }
-.SelectionContent[data-state='open'][data-side='bottom'] {
+.SelectionContent[data-state='closed'] {
     animation-name: slideUpAndFade;
 }
 
@@ -22,11 +23,11 @@
 
 @keyframes slideUpAndFade {
     from {
-        opacity: 0;
-        transform: translateY(2px);
-    }
-    to {
         opacity: 1;
         transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(-2px);
     }
 }
