--- a/client/src/global.css
+++ b/client/src/global.css
@@ -2,6 +2,12 @@
 
 body {@apply bg-gray-50 dark:bg-gray-800}
 
+h1 {@apply text-4xl}
+h2 {@apply text-3xl}
+h3 {@apply text-2xl}
+h4 {@apply text-xl}
+h5 {@apply text-xl font-bold}
+
 @theme {
     --color-primary-50: var(--color-sky-50);
     --color-primary-100: var(--color-sky-100);
