--- a/client/src/components/editor/CustomGifPicker.module.css
+++ b/client/src/components/editor/CustomGifPicker.module.css
@@ -1,10 +1,12 @@
+@import "tailwindcss/theme";
 
 .gif-picker {@apply w-3/4}
 
 .gif-picker {
-    background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 2px;
+    @apply grid grid-cols-3 md:grid-cols-4;
+    background-color: var(--color-sky-50);
+    /*border: 10px solid lightgray;*/
+    border-radius: 10px;
     box-shadow: 0 0 8px #dddddd;
 
     display: grid;
@@ -18,6 +20,7 @@
     padding: 8px;
 
     top: 8px;
+
 }
 
 .gif-picker-item {
