--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,6 +1,9 @@
-@import "tailwindcss";
+/*@import "tailwindcss";*/
 
-@plugin "tailwindcss-animate";
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/utilities.css" layer(utilities);
+
+/*@plugin "tailwindcss-animate";*/
 
 @custom-variant dark (&:is(.dark *));
 
