Add home position logic and wobble animation to HostCharacter component (bee)

--- a/src/client/main.css
+++ b/src/client/main.css
@@ -5,7 +5,8 @@
 @custom-variant dark (&:is(.dark *));
 
 body {
-    @apply bg-gray-50 dark:bg-gray-800;
+    @apply bg-linear-to-t from-sky-200 to-sky-600 dark:bg-gray-800;
+    height: 100vh;
 }
 
 @theme {
