--- a/src/client/main.css
+++ b/src/client/main.css
@@ -4,8 +4,27 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.cherry-bomb-one-regular {
+    font-family: "Cherry Bomb One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.allerta-stencil-regular {
+    font-family: "Allerta Stencil", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+@theme {
+    --font-cherrybomb: "Cherry Bomb One", system-ui;
+    --font-allerta-stencil: "Allerta Stencil", sans-serif;
+}
+
 body {
-    @apply bg-linear-to-t from-sky-200 to-sky-600 dark:bg-gray-800;
+    background-image: url("pexels-mali-142497.jpg");
+    background-size: cover;
     height: 100vh;
 }
 
