Remove unused styles and update headings font to Fredoka
Delete unused CSS files and fonts

--- a/src/client/globals.css
+++ b/src/client/globals.css
@@ -4,27 +4,23 @@
 @custom-variant dark (&:is(.dark *));
 
 body {
-    /*background-image: url("pexels-mali-142497.jpg");*/
     background-size: cover;
     height: 100vh;
 }
 
-.cherry-bomb-one-regular {
-    font-family: "Cherry Bomb One", system-ui;
+.fredoka-sans-regular {
+    font-family: "Fredoka", sans-serif;
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    font-variation-settings: "wdth" 100;
 }
-
-.allerta-stencil-regular {
-    font-family: "Allerta Stencil", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
 
 @theme {
     --font-cherrybomb: "Cherry Bomb One", system-ui;
     --font-allerta-stencil: "Allerta Stencil", sans-serif;
+    --font-fredoka: "Fredoka", sans-serif;
+    --font-display: "Fredoka", sans-serif;
 }
 
 :root {
