--- a/src/client/styles/globals.css
+++ b/src/client/styles/globals.css
@@ -6,6 +6,7 @@
 body {
     background-size: cover;
     height: 100vh;
+    background-color: white
 
 }
 
@@ -65,8 +66,8 @@ html {
 }
 
 :root {
-    --background: oklch(95.08% 0.0481 184.07);
-    --secondary-background: oklch(100% 0 0);
+    --secondary-background: oklch(98.08% 0.0481 184.07);
+    --background: oklch(100% 0 0);
     --foreground: oklch(0% 0 0);
     --main-foreground: oklch(0% 0 0);
     --main: oklch(78.57% 0.1422 180.36);
@@ -84,7 +85,7 @@ html {
 
 .dark {
     --background: oklch(22.65% 0.0236 198.49);
-    --secondary-background: oklch(23.93% 0 0);
+    --secondary-background: oklch(30% 0 0);
     --foreground: oklch(92.49% 0 0);
     --main-foreground: oklch(0% 0 0);
     --main: oklch(71.47% 0.129261 180.4742);
@@ -126,7 +127,7 @@ html {
 
 @layer base {
     body {
-        @apply text-foreground font-base bg-background;
+        @apply text-foreground font-base bg-secondary-background;
     }
 
     h1,
