--- a/src/client/styles/globals.css
+++ b/src/client/styles/globals.css
@@ -259,3 +259,26 @@ html {
         transform: scale(1.05);
     }
 }
+
+@keyframes float {
+    0%,
+    100% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+@keyframes photo-scroll {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-25%);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
